--- a/samples/env/.env
+++ b/samples/env/.env
@@ -21,6 +21,10 @@ PICKING_API_URL=http://picking-api:8000
 PICKING_API_TIMEOUT=10
 # PICKING_UI_LOGIN_ENDPOINT=http://localhost:8000/auth/login
 
+# Cookie settings for UI (set to 0 if serving over HTTP)
+# UI_COOKIE_SECURE=1
+# UI_COOKIE_DOMAIN=
+
 # n8n
 GENERIC_TIMEZONE=America/Santiago
 MPLBACKEND=Agg
