--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -44,10 +44,12 @@ services:
     environment:
       - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
       - MPLBACKEND=${MPLBACKEND}
-      - N8N_HOST=localhost
-      - N8N_PORT=5678
-      - N8N_PROTOCOL=http
-      - WEBHOOK_URL=http://localhost:5678
+      - N8N_HOST=${N8N_HOST}
+      - N8N_PORT=${N8N_PORT:-5678}
+      - N8N_PROTOCOL=${N8N_PROTOCOL:-http}
+      - N8N_EDITOR_BASE_URL=${N8N_EDITOR_BASE_URL:-http://localhost:5678}
+      - N8N_PUBLIC_URL=${N8N_PUBLIC_URL:-http://localhost:5678}
+      - WEBHOOK_URL=${N8N_WEBHOOK_URL:-http://localhost:5678}
     volumes:
       - ../n8n_data:/home/node/.n8n
       - ../data:/data
