--- a/.env
+++ b/.env
@@ -45,10 +45,10 @@ N8N_GIT_NODE_DISABLE_BARE_REPOS=true
 N8N_BLOCK_ENV_ACCESS_IN_NODE=false
 
 # n8n URLs (edit with your public IP or domain if needed)
-N8N_HOST=localhost
+N8N_HOST=localhost54.94.18.141
 N8N_PORT=5678
 N8N_PROTOCOL=http
-N8N_EDITOR_BASE_URL=http://localhost:5678
-N8N_PUBLIC_URL=http://localhost:5678
-N8N_WEBHOOK_URL=http://localhost:5678
+N8N_EDITOR_BASE_URL=http://54.94.18.141:5678
+N8N_PUBLIC_URL=http://54.94.18.141:5678
+N8N_WEBHOOK_URL=http://54.94.18.141:5678
 
