Arreglo UI impresión

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ PRINTER_NAME=ZDesigner ZD888t
 # The UI login page always authenticates against the UI service itself.
 PICKING_API_URL=http://picking-api:8000
 PICKING_API_TIMEOUT=10
+UI_COOKIE_SECURE=0
 # PICKING_UI_LOGIN_ENDPOINT=http://localhost:8000/auth/login
 
 # n8n
